--- a/Ders2App/appsettings.json
+++ b/Ders2App/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=_CHANGE_ME;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=BookShopDataBase;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
 
   "LogDirectory": "C:/dev/logs"
